--- a/pom.xml
+++ b/pom.xml
@@ -155,16 +155,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
                     <!-- Direct -->
                     <!-- JSP Only: <groupId>com.aoapps</groupId><artifactId>ao-encoding-taglib</artifactId><classifier>javadoc</classifier> -->
                     <artifactItem>
-                      <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><classifier>javadoc</classifier>
-                      <includes>element-list, package-list</includes>
-                      <outputDirectory>${project.build.directory}/offlineLinks/com.aoapps/ao-lang</outputDirectory>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>com.aoapps</groupId><artifactId>ao-net-types</artifactId><classifier>javadoc</classifier>
-                      <includes>element-list, package-list</includes>
-                      <outputDirectory>${project.build.directory}/offlineLinks/com.aoapps/ao-net-types</outputDirectory>
-                    </artifactItem>
-                    <artifactItem>
                       <groupId>com.aoapps</groupId><artifactId>ao-servlet-util</artifactId><classifier>javadoc</classifier>
                       <includes>element-list, package-list</includes>
                       <outputDirectory>${project.build.directory}/offlineLinks/com.aoapps/ao-servlet-util</outputDirectory>
@@ -213,14 +203,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
               <offlineLinks combine.children="append">
                 <!-- Direct -->
                 <!-- JSP Only: <groupId>com.aoapps</groupId><artifactId>ao-encoding-taglib</artifactId><classifier>javadoc</classifier> -->
-                <offlineLink>
-                  <url>https://oss.aoapps.com/lang/apidocs/</url>
-                  <location>${project.build.directory}/offlineLinks/com.aoapps/ao-lang</location>
-                </offlineLink>
-                <offlineLink>
-                  <url>https://oss.aoapps.com/net-types/apidocs/</url>
-                  <location>${project.build.directory}/offlineLinks/com.aoapps/ao-net-types</location>
-                </offlineLink>
                 <offlineLink>
                   <url>https://oss.aoapps.com/servlet-util/apidocs/</url>
                   <location>${project.build.directory}/offlineLinks/com.aoapps/ao-servlet-util</location>
@@ -315,12 +297,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         <groupId>com.aoapps</groupId><artifactId>ao-encoding-taglib</artifactId><version>5.0.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
       </dependency>
       <dependency>
-        <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><version>5.6.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
-      </dependency>
-      <dependency>
-        <groupId>com.aoapps</groupId><artifactId>ao-net-types</artifactId><version>2.0.2${POST-SNAPSHOT}</version>
-      </dependency>
-      <dependency>
         <groupId>com.aoapps</groupId><artifactId>ao-servlet-util</artifactId><version>5.3.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
       </dependency>
       <dependency>
@@ -382,6 +358,12 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         <groupId>com.aoapps</groupId><artifactId>ao-io-buffer</artifactId><version>4.1.0${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
+        <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><version>5.6.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+      </dependency>
+      <dependency>
+        <groupId>com.aoapps</groupId><artifactId>ao-net-types</artifactId><version>2.0.2${POST-SNAPSHOT}</version>
+      </dependency>
+      <dependency>
         <groupId>com.aoapps</groupId><artifactId>ao-servlet-filter</artifactId><version>3.0.3${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
@@ -420,10 +402,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         <groupId>com.aoapps</groupId><artifactId>ao-style</artifactId><version>2.0.1${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
-        <groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId><version>3.7.1</version>
-      </dependency>
-      <dependency>
-        <groupId>com.semanticcms</groupId><artifactId>semanticcms-openfile-servlet</artifactId><version>1.10.1${POST-SNAPSHOT}</version>
+        <groupId>com.semanticcms</groupId><artifactId>semanticcms-openfile-servlet</artifactId><version>1.11.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
       </dependency>
       <dependency>
         <groupId>com.semanticcms</groupId><artifactId>semanticcms-pagegraph</artifactId><version>1.7.0${POST-SNAPSHOT}</version>
@@ -458,12 +437,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <!-- Direct -->
     <dependency>
       <groupId>com.aoapps</groupId><artifactId>ao-encoding-taglib</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.aoapps</groupId><artifactId>ao-net-types</artifactId>
     </dependency>
     <dependency>
       <groupId>com.aoapps</groupId><artifactId>ao-servlet-util</artifactId>
@@ -511,10 +484,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <!-- Runtime Direct -->
     <dependency>
       <groupId>com.aoapps</groupId><artifactId>ao-style</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
